--- a/ex417.md
+++ b/ex417.md
@@ -63,57 +63,23 @@ Candidates for the Red Hat Certified Specialist in Microsoft Windows Automation 
     - Manage and configure storage
     - Schedule tasks
 
-
-Preparation
-Red Hat encourages you to consider taking Microsoft Windows Automatin with Red Hat Ansible (DO417) to help prepare.  Attendance in these classes is not required; students can choose to take just the exam.
+## Preparation
+Red Hat encourages you to consider taking Microsoft Windows Automation with Red Hat Ansible (DO417) to help prepare.  Attendance in these classes is not required; students can choose to take just the exam.
 
 While attending Red Hat classes can be an important part of your preparation, attending class does not guarantee success on the exam. Previous experience, practice, and native aptitude are also important determinants of success.
 
 Many books and other resources on system administration for Red Hat products are available. Red Hat does not endorse any of these materials as preparation guides for exams. Nevertheless, you may find additional reading helpful to deepen your understanding.
 
-Exam format
-The Red Hat Certified Specialist in Microsoft Windows Automation with Ansibleis a hands-on, practical exam that requires you to undertake real-world tasks. Internet access is not provided during the exam, and you will not be permitted to bring any hard copy or electronic documentation into the exam. This prohibition includes notes, books, or any other materials. For most exams, the documentation that ships with the product is available during the exam.
+## Exam format
+The Red Hat Certified Specialist in Microsoft Windows Automation with Ansible is a hands-on, practical exam that requires you to undertake real-world tasks. Internet access is not provided during the exam, and you will not be permitted to bring any hard copy or electronic documentation into the exam. This prohibition includes notes, books, or any other materials. For most exams, the documentation that ships with the product is available during the exam.
 
-Scores and reporting		 	 	
+## Scores and reporting		 	 	
 Official scores for exams come exclusively from Red Hat Certification Central. Red Hat does not authorize examiners or training partners to report results to candidates directly. Scores on the exam are usually reported within 3 U.S. business days.
 
 Exam results are reported as total scores. Red Hat does not report performance on individual items, nor will it provide additional information upon request.
 
-
-TAB FOUR = Audience and prerequisites
-Audience for this exam
-System administrators and infrastructure engineers who want to demonstrate an ability to manage Microsoft Windows® systems using Red Hat Ansible Automation Platform
-Microsoft Windows® professionals who would like to expand their skill set to a wider range of platforms
-Architects who want to demonstrate knowledge of managing systems in a heterogeneous environment
-
-Prerequisites for this exam
-Experience with Windows® system administration recommended
-Experience working in a Linux command line environment.  Red Hat Certified System Administrator (RHCSA) or equivalent knowledge recommended
-Experience using editors like Microsoft Visual Studio Code® or Vim recommended
-Experience utilizing source control tools such as Git
-Understanding of Ansible Core and Ansible Automation Platform.
-
-
-
-
-TAB FOUR = Recommended Training Tab
-Recommended next exam or course
-Microsoft Windows Automatin with Red Hat Ansible (DO417) 
-
-
-Implement task control 	 
-Write loops and conditional tasks
-Handle task failures    
-Utilize roles and Ansible Content Collections  	 
-Include and import files
-Create Ansible automation roles
-Get roles and modules from Ansible Content Collections
-Automate tasks for Microsoft Windows   	 
-Manage local users   
-Automate Software Installation on Windows 
-Create/Edit files on Windows 
-Automate Services Control on Windows
-Manage Active Directory Domains
-Manage and configure storage   
-Schedule tasks
-
+## Audience for this exam
+The following types of individuals may be interested in taking this exam:
+  - System administrators and infrastructure engineers who want to demonstrate an ability to manage Microsoft Windows® systems using Red Hat Ansible Automation Platform
+  - Microsoft Windows® professionals who would like to expand their skill set to a wider range of platforms
+  - Architects who want to demonstrate knowledge of managing systems in a heterogeneous environment
